task5/tests/our-tests/output/t7.out
lli: <stdin>:1:1: error: expected top-level entity
line 3: prototype mismatch, function printi expects parameters (INT)
^

